--- a/.github/workflows/real-ci.yml
+++ b/.github/workflows/real-ci.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18, 19, 20]
+    # strategy:
+    #   matrix:
+    #     node-version: [18, 19, 20]
 
     steps:
       - name: Checkout Repository
@@ -20,7 +20,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 19
+          # node-version: ${{ matrix.node-version }}
 
       - name: Install dependency
         run: npm install
@@ -30,11 +31,12 @@ jobs:
         run: echo "No Linting yet testing the stage"
 
       - name: Run Test
+        if: github.event_name == 'pull_request'
         run: npm test -- --ci
         working-directory: demo-app
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: demo-app-build-${{ matrix.node-version }}
+          name: demo-app-build
           path: demo-app/
