--- a/.github/workflows/real-ci.yml
+++ b/.github/workflows/real-ci.yml
@@ -51,5 +51,6 @@ jobs:
 
   parallel-job:
     runs-on: ubuntu-latest
+    needs: build-test
     steps:
       - run: echo "Running Two Jobs Together"
